--- a/src/doctors/templates/doctor_form.html
+++ b/src/doctors/templates/doctor_form.html
@@ -1,58 +1,89 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create Doctor</title>
-</head>
-<body>
-    <h1>Create Doctor</h1>
+{% extends 'base.html' %}
+
+{% block title %}Create Doctor{% endblock %}
+
+{% block content %}
+<div class="form-container">
+    <h2>Create Doctor</h2>
     <form method="post">
         {% csrf_token %}
-        <label for="first_name">First Name:</label>
-        <input type="text" name="first_name" id="first_name" required><br>
 
-        <label for="last_name">Last Name:</label>
-        <input type="text" name="last_name" id="last_name" required><br>
+        <div class="form-group">
+            <label for="first_name">First Name:</label>
+            <input type="text" name="first_name" id="first_name" class="form-control" required>
+        </div>
 
+        <div class="form-group">
+            <label for="last_name">Last Name:</label>
+            <input type="text" name="last_name" id="last_name" class="form-control" required>
+        </div>
+
+    <div class="form-group">
         <label for="specialty">Specialty:</label>
-        <input type="text" name="specialty" id="specialty" required><br>
+        <select name="specialty" id="specialty" class="form-control" required>
+            <option value="" selected disabled>Select Specialty</option>
+            <option value="General Practitioner">General Practitioner</option>
+            <option value="Neurologist">Neurologist</option>
+            <option value="Dermatologist">Dermatologist</option>
+            <option value="Cardiologist">Cardiologist</option>
+            <option value="Radiology">Radiology</option>
+        </select>
+    </div>
 
-        <label for="phone_number">Phone Number:</label>
-        <input type="text" name="phone_number" id="phone_number" required><br>
+        <div class="form-group">
+            <label for="phone_number">Phone Number:</label>
+            <input type="text" name="phone_number" id="phone_number" class="form-control" required>
+        </div>
 
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" required><br>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" class="form-control" required>
+        </div>
 
-        <label for="license_number">License Number:</label>
-        <input type="text" name="license_number" id="license_number" required><br>
+        <div class="form-group">
+            <label for="license_number">License Number:</label>
+            <input type="text" name="license_number" id="license_number" class="form-control" required>
+        </div>
 
         <h3>Address</h3>
+        <div class="form-group">
+            <label for="country">Country:</label>
+            <input type="text" name="country" id="country" class="form-control">
+        </div>
 
-        <label for="country">Country:</label>
-        <input type="text" name="country" id="country"><br>
+        <div class="form-group">
+            <label for="city">City:</label>
+            <input type="text" name="city" id="city" class="form-control">
+        </div>
 
-        <label for="city">City:</label>
-        <input type="text" name="city" id="city"><br>
+        <div class="form-group">
+            <label for="state">State:</label>
+            <input type="text" name="state" id="state" class="form-control">
+        </div>
 
-        <label for="state">State:</label>
-        <input type="text" name="state" id="state"><br>
+        <div class="form-group">
+            <label for="postal_code">Postal Code:</label>
+            <input type="text" name="postal_code" id="postal_code" class="form-control">
+        </div>
 
-        <label for="postal_code">Postal Code:</label>
-        <input type="text" name="postal_code" id="postal_code"><br>
+        <div class="form-group">
+            <label for="street_address">Street Address:</label>
+            <input type="text" name="street_address" id="street_address" class="form-control">
+        </div>
 
-        <label for="street_address">Street Address</label>
-        <input type="text" name="street_address" id="street_address"><br>
+        <button type="submit" class="btn btn-primary">Create Doctor</button>
 
-        <button type="submit">Create Doctor</button>
+        {% if errors %}
+            <div class="error-list">
+                <ul>
+                    {% for field, error_list in errors.items %}
+                        {% for error in error_list %}
+                            <li>{{ field }}: {{ error }}</li>
+                        {% endfor %}
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
     </form>
-
-    {% if errors %}
-        <ul>
-            {% for field, error_list in errors.items %}
-                {% for error in error_list %}
-                    <li>{{ field }}: {{ error }}</li>
-                {% endfor %}
-            {% endfor %}
-        </ul>
-    {% endif %}
-</body>
-</html>
+</div>
+{% endblock %}
