feat: Add update and delete doctor views

--- a/src/doctors/templates/doctor_list.html
+++ b/src/doctors/templates/doctor_list.html
@@ -23,7 +23,7 @@
                     </p>
                 </div>
                 <div class="card-footer text-center">
-                    <a href="#" class="btn btn-primary">View Profile</a>
+                    <a href="{% url 'doctor-detail' doctor.pk %}" class="btn btn-primary">View Profile</a>
                 </div>
             </div>
         </div>
