--- a/src/doctors/templates/base.html
+++ b/src/doctors/templates/base.html
@@ -8,30 +8,76 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/doctor_form.css' %}">
-    {% block extra_css %}{% endblock %}
+    {% block extra_css %}
+    <style>
+        /* Custom Navbar Colors */
+        .navbar {
+            background-color: #4a90e2; /* Darker blue */
+        }
+        .navbar-brand {
+            color: #ffffff !important; /* White text for brand */
+        }
+        .nav-link {
+            color: #ffffff !important; /* White text for links */
+        }
+        .nav-link:hover {
+            color: #ffcc00 !important; /* Yellow color on hover */
+        }
+
+        /* Custom Dropdown Colors */
+        .dropdown-menu {
+            background-color: #ffffff; /* White background for dropdown */
+            border: 1px solid #e1e1e1; /* Light gray border */
+        }
+        .dropdown-item {
+            color: #333333; /* Dark text for items */
+        }
+        .dropdown-item:hover {
+            background-color: #f1f1f1; /* Light gray background on hover */
+            color: #007bff; /* Blue text on hover */
+        }
+
+        /* Custom Button Colors */
+        .btn-primary {
+            background-color: #ff6600; /* Orange background */
+            border-color: #ff6600; /* Orange border */
+        }
+        .btn-primary:hover {
+            background-color: #e65c00; /* Darker orange background on hover */
+            border-color: #e65c00; /* Darker orange border */
+        }
+    </style>
+    {% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Hospital Management</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'create-doctor' %}">Create Doctor</a>
-                </li>
-                <!-- Add more navigation items here -->
-            </ul>
-        </div>
-    </nav>
-
-    <div class="container">
-        {% block content %}
-        <!-- Content will be inserted here -->
-        {% endblock %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Hospital Management</a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
+                    Doctors
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{% url 'create-doctor' %}">Create Doctor</a>
+                    <a class="dropdown-item" href="{% url 'doctor-list' %}">List Doctors</a>
+                </div>
+            </li>
+            <!-- Add more navigation items here -->
+        </ul>
     </div>
+</nav>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    {% block extra_js %}{% endblock %}
+<div class="container">
+    {% block content %}
+    <!-- Content will be inserted here -->
+    {% endblock %}
+</div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+{% block extra_js %}{% endblock %}
 </body>
 </html>
