--- a/src/doctors/templates/doctor_list.html
+++ b/src/doctors/templates/doctor_list.html
@@ -3,7 +3,7 @@
 {% block title %}Doctor List{% endblock %}
 {% load static %}
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/doctor_list.css' %}">
+    <link rel="stylesheet" href="{% static 'doctor_list.css' %}">
 {% endblock %}
 
 {% block content %}
