feat: List, Update, Delete Patients

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,7 +32,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="patientDropdown">
                     <a class="dropdown-item" href="{% url 'create_patient' %}">Register Patient</a>
-                    <a class="dropdown-item" href="#">List Patients</a> <!-- You can add the URL for listing patients here -->
+                    <a class="dropdown-item" href="{% url 'patient-list' %}">List Patients</a> <!-- You can add the URL for listing patients here -->
                 </div>
             </li>
         </ul>
