--- a/src/patients/templates/patient_form.html
+++ b/src/patients/templates/patient_form.html
@@ -9,15 +9,8 @@
         {% csrf_token %}
 
         <!-- Patient Information -->
-        <div class="form-group">
-            <label for="first_name">First Name:</label>
-            <input type="text" name="first_name" id="first_name" class="form-control" required>
-        </div>
-
-        <div class="form-group">
-            <label for="last_name">Last Name:</label>
-            <input type="text" name="last_name" id="last_name" class="form-control" required>
-        </div>
+        <!-- Include the common basic information fields -->
+        {% include 'basic_info_form.html' %}
 
         <div class="form-group">
             <label for="date_of_birth">Date of Birth:</label>
@@ -33,102 +26,12 @@
             </select>
         </div>
 
-        <div class="form-group">
-            <label for="phone_number">Phone Number:</label>
-            <input type="text" name="phone_number" id="phone_number" class="form-control" required>
-        </div>
-
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" class="form-control" required>
-        </div>
-
         <h3>Patient Address</h3>
-        <div class="form-group">
-            <label for="country">Country:</label>
-            <select name="country" id="country" class="form-control" required>
-                <option value="">Select a country</option>
-                {% for country in countries %}
-                <option value="{{ country.name }}">{{ country.name }}</option>
-                {% endfor %}
-            </select>
-        </div>
+        <!-- Include the common address fields -->
+        {% include 'address_form.html' with countries=countries %}
 
-        <div class="form-group">
-            <label for="city">City:</label>
-            <input type="text" name="city" id="city" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="state">State:</label>
-            <input type="text" name="state" id="state" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="postal_code">Postal Code:</label>
-            <input type="text" name="postal_code" id="postal_code" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="street_address">Street Address:</label>
-            <input type="text" name="street_address" id="street_address" class="form-control">
-        </div>
-
-        <h2>Emergency Contact</h2>
-        <div class="form-group">
-            <label for="emergency_contact_name">Emergency Contact Name:</label>
-            <input type="text" name="emergency_contact_name" id="emergency_contact_name" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="emergency_contact_phone">Emergency Contact Phone:</label>
-            <input type="text" name="emergency_contact_phone" id="emergency_contact_phone" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="emergency_contact_mobile_phone">Emergency Contact Mobile Phone:</label>
-            <input type="text" name="emergency_contact_mobile_phone" id="emergency_contact_mobile_phone"
-                   class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="emergency_contact_relationship">Relationship:</label>
-            <input type="text" name="emergency_contact_relationship" id="emergency_contact_relationship"
-                   class="form-control">
-        </div>
-
-        <h3>Emergency Contact Address</h3>
-        <div class="form-group">
-            <label for="emergency_contact_country">Country:</label>
-            <select name="emergency_contact_country" id="emergency_contact_country" class="form-control" required>
-                <option value="">Select a country</option>
-                {% for country in countries %}
-                <option value="{{ country.name }}">{{ country.name }}</option>
-                {% endfor %}
-            </select>
-        </div>
-
-        <div class="form-group">
-            <label for="emergency_contact_city">City:</label>
-            <input type="text" name="emergency_contact_city" id="emergency_contact_city" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="emergency_contact_state">State:</label>
-            <input type="text" name="emergency_contact_state" id="emergency_contact_state" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="emergency_contact_postal_code">Postal Code:</label>
-            <input type="text" name="emergency_contact_postal_code" id="emergency_contact_postal_code"
-                   class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="emergency_contact_street_address">Street Address:</label>
-            <input type="text" name="emergency_contact_street_address" id="emergency_contact_street_address"
-                   class="form-control">
-        </div>
+        <!-- Include the common emergency contact fields -->
+        {% include 'emergency_contact_form.html' with countries=countries %}
 
         <h3>Insurance Information</h3>
         <div class="form-group">
