feat: Change the emergency_contact model

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -4,50 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="A comprehensive hospital management system.">
+
     <title>{% block title %}Hospital Management System{% endblock %}</title>
 
     <!-- jQuery (must be loaded before Bootstrap and Toastr) -->
     <script src="{% static 'jquery/jquery.min.js' %}"></script>
-    <!-- Bootstrap CSS (from static folder) -->
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
 
-    <!-- Toastr CSS (from static folder) -->
+    <!-- Toastr CSS -->
     <link rel="stylesheet" href="{% static 'toastr/toastr.min.css' %}">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/form.css' %}">
+    <link rel="stylesheet" href="{% static 'css/background.css' %}">
 
     {% block extra_css %}{% endblock %}
 </head>
 <body>
-
-<!-- Bootstrap JS (from static folder) -->
-<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-
-<!-- Toastr JS (from static folder) -->
-<script src="{% static 'toastr/toastr.min.js' %}"></script>
-
-<!-- Toastr global settings (optional) -->
-<script>
-    toastr.options = {
-        "closeButton": true,
-        "progressBar": true,
-        "timeOut": "5000",
-        "showMethod": "fadeIn",
-        "hideMethod": "fadeOut",
-    };
-</script>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#">Hospital Management</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <!-- Doctors Dropdown -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="doctorDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
+                       data-bs-toggle="dropdown" aria-expanded="false" aria-label="Doctors menu">
                         Doctors
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="doctorDropdown">
@@ -59,7 +50,7 @@
                 <!-- Patients Dropdown -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="patientDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
+                       data-bs-toggle="dropdown" aria-expanded="false" aria-label="Patients menu">
                         Patients
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="patientDropdown">
@@ -71,8 +62,7 @@
                 <!-- Nurses Dropdown -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="nurseDropdown" role="button"
-                       data-bs-toggle="dropdown"
-                       aria-expanded="false">
+                       data-bs-toggle="dropdown" aria-expanded="false" aria-label="Nurses menu">
                         Nurses
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="nurseDropdown">
@@ -82,8 +72,8 @@
                 </li>
             </ul>
 
-            <!-- Right side links (optional) -->
-            <ul class="navbar-nav ml-auto">
+            <!-- Right Side Links (optional) -->
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
                 </li>
@@ -95,11 +85,32 @@
     </div>
 </nav>
 
-<div class="container">
+<div class="container my-4">
     {% block content %}
     <!-- Content will be inserted here -->
     {% endblock %}
 </div>
+
+<!-- Bootstrap JS -->
+<script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+
+<!-- Toastr JS -->
+<script src="{% static 'toastr/toastr.min.js' %}"></script>
+
+<script>
+    $(document).ready(function() {
+        // Toastr settings
+        toastr.options = {
+            "closeButton": true,
+            "progressBar": true,
+            "timeOut": "5000",
+            "showMethod": "fadeIn",
+            "hideMethod": "fadeOut"
+        };
+
+        // Other custom JS logic can be added here
+    });
+</script>
 
 {% block extra_js %}{% endblock %}
 </body>
