--- a/src/templates/emergency_contact_form.html
+++ b/src/templates/emergency_contact_form.html
@@ -1,18 +1,47 @@
 <!-- emergency_contact_form.html -->
 <h2>Emergency Contact</h2>
 <div class="form-group">
-    <label for="emergency_contact_name">Emergency Contact Name:</label>
-    <input type="text" name="emergency_contact_name" id="emergency_contact_name" class="form-control">
+    <label for="emergency_contact_first_name">First Name:</label>
+    <input type="text" name="emergency_contact_first_name" id="emergency_contact_first_name" class="form-control"
+           required>
 </div>
 
 <div class="form-group">
-    <label for="emergency_contact_phone">Emergency Contact Phone:</label>
-    <input type="text" name="emergency_contact_phone" id="emergency_contact_phone" class="form-control">
+    <label for="emergency_contact_last_name">Last Name:</label>
+    <input type="text" name="emergency_contact_last_name" id="emergency_contact_last_name" class="form-control"
+           required>
 </div>
 
 <div class="form-group">
-    <label for="emergency_contact_mobile_phone">Emergency Contact Mobile Phone:</label>
-    <input type="text" name="emergency_contact_mobile_phone" id="emergency_contact_mobile_phone" class="form-control">
+    <label for="emergency_contact_phone_number">Phone Number:</label>
+    <input type="text" name="emergency_contact_phone_number" id="emergency_contact_phone_number" class="form-control"
+           required>
+</div>
+
+<div class="form-group">
+    <label for="emergency_contact_email">Email:</label>
+    <input type="text" name="emergency_contact_email" id="emergency_contact_email" class="form-control" required>
+</div>
+
+<div class="form-group">
+    <label for="emergency_contact_date_of_birth">Date of Birth:</label>
+    <input type="date" name="emergency_contact_date_of_birth" id="emergency_contact_date_of_birth" class="form-control"
+           required>
+</div>
+
+<div class="form-group">
+    <label for="emergency_contact_gender">Gender:</label>
+    <select name="emergency_contact_gender" id="emergency_contact_gender" class="form-control" required>
+        {% for code, name in gender_choices %}
+        <option value="{{ code }}">{{ name }}</option>
+        {% endfor %}
+    </select>
+</div>
+
+<div class="form-group">
+    <label for="emergency_contact_secondary_phone_number">Secondary Phone Number:</label>
+    <input type="text" name="emergency_contact_secondary_phone_number" id="emergency_contact_secondary_phone_number"
+           class="form-control">
 </div>
 
 <div class="form-group">
@@ -48,5 +77,6 @@
 
 <div class="form-group">
     <label for="emergency_contact_street_address">Street Address:</label>
-    <input type="text" name="emergency_contact_street_address" id="emergency_contact_street_address" class="form-control">
+    <input type="text" name="emergency_contact_street_address" id="emergency_contact_street_address"
+           class="form-control">
 </div>
