Changes to the patient model

--- a/src/templates/emergency_contact_form.html
+++ b/src/templates/emergency_contact_form.html
@@ -2,31 +2,27 @@
 <h2>Emergency Contact</h2>
 <div class="form-group">
     <label for="emergency_contact_first_name">First Name:</label>
-    <input type="text" name="emergency_contact_first_name" id="emergency_contact_first_name" class="form-control"
-           required>
+    <input type="text" name="emergency_contact_first_name" id="emergency_contact_first_name" class="form-control">
 </div>
 
 <div class="form-group">
     <label for="emergency_contact_last_name">Last Name:</label>
-    <input type="text" name="emergency_contact_last_name" id="emergency_contact_last_name" class="form-control"
-           required>
+    <input type="text" name="emergency_contact_last_name" id="emergency_contact_last_name" class="form-control">
 </div>
 
 <div class="form-group">
     <label for="emergency_contact_phone_number">Phone Number:</label>
-    <input type="text" name="emergency_contact_phone_number" id="emergency_contact_phone_number" class="form-control"
-           required>
+    <input type="text" name="emergency_contact_phone_number" id="emergency_contact_phone_number" class="form-control">
 </div>
 
 <div class="form-group">
     <label for="emergency_contact_email">Email:</label>
-    <input type="text" name="emergency_contact_email" id="emergency_contact_email" class="form-control" required>
+    <input type="text" name="emergency_contact_email" id="emergency_contact_email" class="form-control">
 </div>
 
 <div class="form-group">
     <label for="emergency_contact_date_of_birth">Date of Birth:</label>
-    <input type="date" name="emergency_contact_date_of_birth" id="emergency_contact_date_of_birth" class="form-control"
-           required>
+    <input type="date" name="emergency_contact_date_of_birth" id="emergency_contact_date_of_birth" class="form-control">
 </div>
 
 <div class="form-group">
