--- a/src/doctors/templates/doctor_form.html
+++ b/src/doctors/templates/doctor_form.html
@@ -10,14 +10,22 @@
         {% block extra_css %}
         <link rel="stylesheet" href="{% static 'doctor_form.css' %}">
         {% endblock %}
+
+        <!-- Include the common basic information fields -->
+        {% include 'basic_info_form.html' %}
+
         <div class="form-group">
-            <label for="first_name">First Name:</label>
-            <input type="text" name="first_name" id="first_name" class="form-control" required>
+            <label for="date_of_birth">Date of Birth:</label>
+            <input type="date" name="date_of_birth" id="date_of_birth" class="form-control" required>
         </div>
 
         <div class="form-group">
-            <label for="last_name">Last Name:</label>
-            <input type="text" name="last_name" id="last_name" class="form-control" required>
+            <label for="gender">Gender:</label>
+            <select name="gender" id="gender" class="form-control" required>
+                {% for code, name in gender_choices %}
+                <option value="{{ code }}">{{ name }}</option>
+                {% endfor %}
+            </select>
         </div>
 
         <div class="form-group">
@@ -29,53 +37,29 @@
             </select>
         </div>
 
-
-        <div class="form-group">
-            <label for="phone_number">Phone Number:</label>
-            <input type="text" name="phone_number" id="phone_number" class="form-control" required>
-        </div>
-
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" class="form-control" required>
-        </div>
-
         <div class="form-group">
             <label for="license_number">License Number:</label>
             <input type="text" name="license_number" id="license_number" class="form-control" required>
         </div>
 
-        <h3>Address</h3>
+        <!-- Date Hired -->
         <div class="form-group">
-            <!-- Country dropdown -->
-            <label for="country">Country:</label>
-            <select name="country" id="country" class="form-control" required>
-                <option value="">Select a country</option>
-                {% for country in countries %}
-                <option value="{{ country.name }}">{{ country.name }}</option>
-                {% endfor %}
-            </select>
+            <label for="date_hired">Date Hired:</label>
+            <input type="date" name="date_hired" id="date_hired" class="form-control" required>
         </div>
 
+        <!-- Hiring End Date (Optional) -->
         <div class="form-group">
-            <label for="city">City:</label>
-            <input type="text" name="city" id="city" class="form-control">
+            <label for="hiring_end_date">End Date:</label>
+            <input type="date" name="hiring_end_date" id="hiring_end_date" class="form-control">
         </div>
 
-        <div class="form-group">
-            <label for="state">State:</label>
-            <input type="text" name="state" id="state" class="form-control">
-        </div>
+        <h3>Doctor Address</h3>
+        <!-- Include the common address fields -->
+        {% include 'address_form.html' with countries=countries %}
 
-        <div class="form-group">
-            <label for="postal_code">Postal Code:</label>
-            <input type="text" name="postal_code" id="postal_code" class="form-control">
-        </div>
-
-        <div class="form-group">
-            <label for="street_address">Street Address:</label>
-            <input type="text" name="street_address" id="street_address" class="form-control">
-        </div>
+        <!-- Include the emergency contact fields -->
+        {% include 'emergency_contact_form.html' with countries=countries %}
 
         <button type="submit" class="btn btn-primary">Create Doctor</button>
 
